<resources>
    <string name="app_name">EasyBursaries</string>
    <string name="app_Name">My Application</string>
    <string name="app_Settings">Settings</string>
    <string name="notifications_message">You have no notifications</string>
    <string name="title_bar">Notifications</string>
    <string name="switch_bar">Notifications</string>
    <string name="switch_bar1">Sign Out</string>
    <string name="switch_bar2">Dark Mode</string>
    <string name="menuAboutUs">About Us</string>
    <string name="privacypolicy">Privacy Policy </string>
    <string name="tellAfriend">Tell a friend</string>
    <string name="FAQ">FAQ</string>
    <string name="help">Help</string>
    <string name="menusettings">Settings</string>
    <string name="Profile_heading">Profile</string>
    <string name="Log_in">Log In</string>
    <string name="Username">Username</string>
    <string name="Sign_up">Sign Up</string>
    <string name="SignUp_heading">Sign Up</string>
    <string name="SignUp_button">Sign Up</string>
    <string name="Log_in2">LOG IN</string>
    <string name="Log_out">LOG OUT</string>
    <string name="Bursaries">BURSARIES</string>
    <string name="Saved_bursaries">SAVED BURSARIES</string>
    <string name="Notifications">NOTIFICATIONS</string>
    <string name="Information">INFORMATION</string>
    <string name="Profile">PROFILE</string>
    <string name="Welcome_message">Welcome Back</string>
    <string name="Signup_message">Dont have an account ?</string>
    <string name="Forgot_Password">
       Forgot Password? <u>Click Here</u>
    </string>
    <string name="Email">Email</string>
    <string name="FirstName">First Name</string>
    <string name="Surname">Last Name</string>
    <string name="Address">Address</string>
    <string name="Number">Phone Number</string>
    <string name="Save_button">Save</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_sign_up_page">Sign_UpPage</string>
    <string name="checkbox">I confirm that details provided are legit.</string>
    <string name="action_settings">Settings</string>
    <string name="share1">Want to share ?</string>
    <string name="share2">Send</string>
    <string name="AboutUs_Text">
        <p>We as Easy Bursaries offer this platform for most comprehensive list of bursaries in
        South africa, and these bursaries are updated regularly. Our goal is to provide many
        bursary opportunities with accurate applying information, we do this to make it easier
        for students.If you are looking to start or continue your tertiary studies but lack the
        funding to do so, Easy bursaries could be the right option.</p>
    </string>
    <string name="Contact_Us"> <p><u>Platforms where you can find us</u></p></string>
    <string name="Facebook">Facebook</string>
    <string name="LinkedIn">linkedIn</string>
    <string name="Twitter">Twitter</string>
</resources>