<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070813"
    tools:context=".HomePage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-51dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="-51dp"
        android:fontFamily="sans-serif-black"
        android:includeFontPadding="true"
        android:text="@string/Welcome_message"
        android:textColor="#FFFFFF"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246" />


    <EditText
        android:id="@+id/Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="124dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="678dp"
        android:autofillHints=""
        android:focusable="true"
        android:gravity="clip_vertical"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textColorHint="#ffffff"
        android:textSize="21sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bursariesbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="59dp"
        android:layout_marginTop="-202dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="536dp"
        android:padding="17dp"
        android:text="@string/Bursaries"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/savedbursariesbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="59dp"
        android:layout_marginTop="-202dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="446dp"
        android:padding="17dp"
        android:text="@string/Saved_bursaries"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="59dp"
        android:layout_marginTop="-202dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="356dp"
        android:padding="17dp"
        android:text="@string/Notifications"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="59dp"
        android:layout_marginTop="-202dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="263dp"
        android:padding="17dp"
        android:text="@string/Information"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="59dp"
        android:layout_marginTop="-202dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="177dp"
        android:padding="17dp"
        android:text="@string/Profile"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="-202dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="49dp"
        android:fontFamily="sans-serif"
        android:padding="9dp"
        android:text="@string/Log_out"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>