<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070813"
    tools:context=".SettingsPage">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/main"
        android:layout_width="369dp"
        android:layout_height="98dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/switch_bar"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/Darmode"
        android:layout_width="369dp"
        android:layout_height="98dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="104dp"
        android:text="@string/switch_bar2"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sign_out"
        android:layout_width="369dp"
        android:layout_height="93dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="192dp"
        android:text="@string/switch_bar1"
        android:textColor="#ffffff"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>