<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#070813"
    tools:context=".LoginPage">

    <ImageView
        android:layout_width="411dp"
        android:layout_height="390dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-6dp"
        android:layout_marginTop="-80dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="582dp"
        android:src="@drawable/login_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Username"
        android:layout_alignEnd="@id/Username"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-51dp"
        android:layout_marginTop="267dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="-51dp"
        android:fontFamily="sans-serif-black"
        android:includeFontPadding="true"
        android:text="@string/Log_in"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246" />

    <TextView
        android:id="@+id/tvRegisterLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="171dp"
        android:layout_marginBottom="491dp"
        android:text="@string/Sign_up"
        android:textColor="#021475"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="380dp"
        android:autofillHints=""
        android:background="#30ffffff"
        android:focusable="true"
        android:gravity="clip_vertical"
        android:hint="Username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Username"
        android:layout_alignEnd="@+id/Username"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:layout_marginStart="41dp"
        android:layout_marginTop="-365dp"
        android:layout_marginEnd="-1dp"
        android:autofillHints=""
        android:background="#30ffffff"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#ffffff" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="112dp"
        android:layout_marginTop="-235dp"
        android:layout_marginEnd="-108dp"
        android:text="Don't have an account yet? "
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="143dp"
        android:layout_marginEnd="-56dp"
        android:clickable="true"
        android:minHeight="48dp"
        android:text="@string/Forgot_Password"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="65dp"
        android:layout_marginTop="-202dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="170dp"
        android:fontFamily="sans-serif"
        android:padding="9dp"
        android:text="@string/Log_in2"
        android:textSize="20sp" />


</RelativeLayout>